# aw-assimp

./: .gitmodules  README.md  aw-assimp-bindings.asd  aw-assimp.asd  claw-assimp-bindings.asd  claw-assimp.asd
.github/workflows/: build.yaml
bindings/: aarch64-linux-android.lisp  x86_64-pc-linux-gnu.lisp  x86_64-pc-windows-gnu.lisp  x86_64-w64-mingw32.lisp
src/: claw.lisp
src/lib/: CMakeLists.txt  adapter.aarch64-linux-android.c  adapter.c  adapter.x86_64-pc-linux-gnu.c  adapter.x86_64-pc-windows-gnu.c  adapter.x86_64-w64-mingw32.c  build.ps1  build.sh
